# ai-lab-night-browser-automation

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TEAM-EXPERIMENT.md  USAGE.md  browser_use_search_company.py  codigos_postales.txt  database.py  find_lead.py  find_projects.py  import_postcodes.py  main.py  main3.py  mcp_server_config.json  mcp_server_config_external.json  pyproject.toml  requirements.txt  resolve_captcha.md  run_test.py  scraper.py  task_human_detection.md  view_agencies.py
devjobscout/: .env.example  .gitignore  AUTH_GUIDE.md  QUICKSTART.md  README.md  app.py  pyproject.toml  run.sh
devjobscout/src/: __init__.py
devjobscout/src/auth/: __init__.py  google_auth.py  linkedin_auth.py  session_manager.py
devjobscout/src/config/: __init__.py  settings.py
devjobscout/src/data/: github_profile.json  infojobs_jobs.json  linkedin_jobs.json  remoteok_jobs.json  user_profile.json
devjobscout/src/extractors/: __init__.py  cv_parser.py  github_browser_extractor.py  github_extractor.py  stack_extractor.py
devjobscout/src/filters/: __init__.py  job_filter.py
devjobscout/src/notifiers/: __init__.py  notion_notifier.py  telegram_notifier.py
devjobscout/src/profile/: profile_analyzer.py  user_profile.py
devjobscout/src/scrapers/: __init__.py  infojobs_agent.py  linkedin_agent.py  linkedin_agent_v2.py  remoteok_agent.py
devjobscout/src/ui/: __init__.py  auth_ui.py
docs/: AGENT_GUIDE.md  MCP_EXTERNAL_CONFIG.md  MCP_SERVER.md  PROJECT_README.md  USAGE.md
examples/: agent_basic_test.py  basic_test.py  mcp_client_example.py  (+2 more)
(+15 files in other folders)
